add cta, fix hero section

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
         </button>
         <div aria-label="Thành viên CLB" class="tw-mt-16 tw-flex tw-max-md:overflow-x-auto tw-gap-6 tw-max-w-5xl tw-w-full tw-pb-6 tw-justify-center">
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
-            src="image/herosection/1.jpg"
+            src="image/herosection/1.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
             src="image/herosection/2.jpg"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
-            src="image/herosection/3.jpg"
+            src="image/herosection/3.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
-            src="image/herosection/4.JPG"
+            src="image/herosection/4.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md tw-hidden md:tw-block" height="176"
             src="image/herosection/5.jpg"
@@ -264,6 +264,38 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               <h5 class="fw-semibold mb-2">Cơ hội nghề nghiệp</h5>
               <p class="text-muted mb-0">Tiếp cận thực tập, việc làm từ sớm qua mạng lưới HLS.</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="cta-section">
+      <div class="container position-relative">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="cta-title mb-4">Sẵn sàng gia nhập cộng đồng HLS?</h2>
+            <p class="cta-description mb-5">
+              Đừng bỏ lỡ cơ hội phát triển bản thân và kết nối với những người có cùng đam mê. 
+              Hãy trở thành một phần của gia đình HLS ngay hôm nay!
+            </p>
+            <div class="cta-image-frame mb-5">
+              <img src="image/background/backgroundgen5.webp" class="img-fluid" alt="HLS Community">
+            </div>
+            <button
+              class="btn btn-cta-large"
+              type="button"
+              data-fillout-id="e7P6HJx4a7us" 
+              data-fillout-embed-type="popup" 
+              data-fillout-dynamic-resize 
+              data-fillout-inherit-parameters 
+              data-fillout-popup-size="medium">
+              <span>Đăng ký ngay</span>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.821 11.999h13.43m0 0-6.714-6.715m6.715 6.715-6.715 6.715" stroke="currentColor"
+                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
