--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 src="image/cac-ban/ban-truyen-thong.jpg"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Truyền thông"
-                style="height: 350px; width: 100%; object-fit: cover"
+                style="height: 350px; width: 100%; object-fit: contain"
               />
               <h5 class="fw-bold mb-2">Ban Truyền thông</h5>
               <p class="mb-0 text-muted-2">
@@ -180,7 +180,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 src="image/cac-ban/ban-doi-ngoai.jpg"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Đối ngoại"
-                style="height: 350px; width: 100%; object-fit: cover"
+                style="height: 350px; width: 100%; object-fit: contain"
               />
               <h5 class="fw-bold mb-2">Ban Đối ngoại</h5>
               <p class="mb-0 text-muted-2">
@@ -193,7 +193,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 src="image/cac-ban/ban-su-kien.jpg"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Sự kiện"
-                style="height: 350px; width: 100%; object-fit: cover"
+                style="height: 350px; width: 100%; object-fit: contain"
               />
               <h5 class="fw-bold mb-2">Ban Sự kiện</h5>
               <p class="mb-0 text-muted-2">
@@ -206,7 +206,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 src="image/cac-ban/ban-chuyen-mon.jpg"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Chuyên môn"
-                style="height: 350px; width: 100%; object-fit: cover"
+                style="height: 350px; width: 100%; object-fit: contain"
               />
               <h5 class="fw-bold mb-2">Ban Chuyên môn</h5>
               <p class="mb-0 text-muted-2">
@@ -219,7 +219,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 src="image/cac-ban/ban-nhan-su.jpg"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Nhân sự"
-                style="height: 350px; width: 100%; object-fit: cover"
+                style="height: 350px; width: 100%; object-fit: contain"
               />
               <h5 class="fw-bold mb-2">Ban Nhân sự</h5>
               <p class="mb-0 text-muted-2">
