--- a/lien-he.html
+++ b/lien-he.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <span class="footer-logo">H</span>
+          <span class="site-logo">H</span>
           <span class="fw-bold">HLS</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,29 +85,6 @@
         </div>
       </div>
     </main>
-
-    <footer class="pt-5 pb-4">
-      <div class="container">
-        <div class="row g-4 align-items-center">
-          <div class="col-md-6 d-flex align-items-center gap-3">
-            <span class="footer-logo">H</span>
-            <div>
-              <div class="fw-bold">Hust Logistics and Supply Chain Club</div>
-              <div class="text-muted-2 small">Đại học Bách Khoa Hà Nội</div>
-            </div>
-          </div>
-          <div class="col-md-6 text-md-end">
-            <div class="small">Email: contact.hls@hust.edu.vn</div>
-            <div class="small">Facebook: <a href="#">Fanpage HLS</a> • LinkedIn: <a href="#">HLS</a></div>
-          </div>
-        </div>
-        <hr class="my-4 border-secondary" />
-        <div class="d-flex justify-content-between small">
-          <span>© 2024 hls - Hust Logistics and Supply Chain Club. All rights reserved.</span>
-          <span>Made with Bootstrap 5</span>
-        </div>
-      </div>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
