--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Hust Logistics and Supply Chain Club (HLS) - Nơi kết nối đam mê, phát triển chuyên môn và định hướng tương lai trong ngành Logistics và Quản lý chuỗi cung ứng."
     />
+    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,9 +36,8 @@
     <!-- Header / Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top bg-white" style="z-index: 1000;">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <span class="site-logo">H</span>
-          <span class="fw-bold">HLS</span>
+        <a class="navbar-brand" href="index.html">
+          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button
           class="navbar-toggler"
