--- a/lien-he.html
+++ b/lien-he.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Liên hệ - HLS</title>
     <meta name="description" content="Liên hệ HLS - Form liên hệ, thông tin email, fanpage, địa chỉ và bản đồ." />
+    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -14,9 +15,8 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <span class="site-logo">H</span>
-          <span class="fw-bold">HLS</span>
+        <a class="navbar-brand" href="index.html">
+          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
