change image to webp

--- a/cuoc-thi.html
+++ b/cuoc-thi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cuộc thi - HLS</title>
     <meta name="description" content="Các cuộc thi của HLS." />
-    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="image/logo/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
+          <img src="image/logo/logo.webp" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         <!-- SRACE -->
         <div class="row g-5 align-items-center mt-4">
           <div class="col-lg-6">
-            <img src="image/cuoc-thi/Srace2025.jpg" alt="Cuộc thi SRACE" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
+            <img src="image/cuoc-thi/Srace2025.webp" alt="Cuộc thi SRACE" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
           </div>
           <div class="col-lg-6">
             <h2 class="fw-bold mb-3">Cuộc thi SRACE</h2>
@@ -64,7 +64,7 @@
         <!-- VNY -->
         <div class="row g-5 align-items-center mt-5 pt-4">
           <div class="col-lg-6 order-lg-2">
-            <img src="image/cuoc-thi/vny2024.JPG" alt="Cuộc thi VNY" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
+            <img src="image/cuoc-thi/vny2024.webp" alt="Cuộc thi VNY" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
           </div>
           <div class="col-lg-6 order-lg-1">
             <h2 class="fw-bold mb-3">Cuộc thi VNYLT</h2>
