--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hoạt động - HLS</title>
     <meta name="description" content="Hoạt động của HLS - Company Tour, Workshop chuyên ngành, Training nội bộ, Team Building." />
-    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="image/logo/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
+          <img src="image/logo/logo.webp" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,13 +45,13 @@
           <p class="text-muted">Mỗi mùa Giáng sinh, HLS lại cùng nhau tạo nên những kỷ niệm ấm áp qua các hoạt động trang trí, trao quà và những buổi tiệc thân mật.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh.jpg" alt="Giáng sinh 1" />
+              <img src="image/hoat-dong/giangsinh.webp" alt="Giáng sinh 1" />
             </div>
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh2.jpg" alt="Giáng sinh 2" />
+              <img src="image/hoat-dong/giangsinh2.webp" alt="Giáng sinh 2" />
             </div>
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh3.jpg" alt="Giáng sinh 3" />
+              <img src="image/hoat-dong/giangsinh3.webp" alt="Giáng sinh 3" />
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
           <p class="text-muted">HLS luôn dành sự trân trọng đặc biệt đến các thành viên nữ. Ngày 8/3 là dịp để chúng tôi gửi lời cảm ơn và những món quà ý nghĩa.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/tangqua.jpg" alt="Hoạt động 8/3" />
+              <img src="image/hoat-dong/tangqua.webp" alt="Hoạt động 8/3" />
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
           <p class="text-muted">Tôn vinh vẻ đẹp và vai trò của người phụ nữ Việt Nam, HLS tổ chức các hoạt động ý nghĩa để chúc mừng các thành viên nữ.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/tangqua2010.jpg" alt="Hoạt động 20/10" />
+              <img src="image/hoat-dong/tangqua2010.webp" alt="Hoạt động 20/10" />
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
           <p class="text-muted">Dấu mốc quan trọng hàng năm, là dịp để tất cả các thế hệ thành viên cùng nhìn lại chặng đường đã qua và hướng tới tương lai.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/sinhnhat.jpg" alt="Sinh nhật CLB" />
+              <img src="image/hoat-dong/sinhnhat.webp" alt="Sinh nhật CLB" />
             </div>
           </div>
         </div>
