--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Hust Logistics and Supply Chain Club (HLS) - Nơi kết nối đam mê, phát triển chuyên môn và định hướng tương lai trong ngành Logistics và Quản lý chuỗi cung ứng."
     />
-    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="image/logo/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-white" style="z-index: 1000;">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
+          <img src="image/logo/logo.webp" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button
           class="navbar-toggler"
@@ -119,7 +119,7 @@
             src="image/herosection/1.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
-            src="image/herosection/2.jpg"
+            src="image/herosection/2.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
             src="image/herosection/3.webp"
@@ -128,7 +128,7 @@
             src="image/herosection/4.webp"
             width="144" />
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md tw-hidden md:tw-block" height="176"
-            src="image/herosection/5.jpg"
+            src="image/herosection/5.webp"
             width="144" />
         </div>
       </main>
@@ -163,7 +163,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
           <div class="col-lg-8 p-4 p-lg-5 org-content">
             <div class="org-panel active fade-in" id="ban-truyen-thong">
               <img
-                src="image/cac-ban/ban-truyen-thong.jpg"
+                src="image/cac-ban/ban-truyen-thong.webp"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Truyền thông"
                 style="height: 350px; width: 100%; object-fit: contain"
@@ -177,7 +177,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
             </div>
             <div class="org-panel" id="ban-doi-ngoai">
               <img
-                src="image/cac-ban/ban-doi-ngoai.jpg"
+                src="image/cac-ban/ban-doi-ngoai.webp"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Đối ngoại"
                 style="height: 350px; width: 100%; object-fit: contain"
@@ -190,7 +190,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
             </div>
             <div class="org-panel" id="ban-su-kien">
               <img
-                src="image/cac-ban/ban-su-kien.jpg"
+                src="image/cac-ban/ban-su-kien.webp"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Sự kiện"
                 style="height: 350px; width: 100%; object-fit: contain"
@@ -203,7 +203,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
             </div>
             <div class="org-panel" id="ban-chuyen-mon">
               <img
-                src="image/cac-ban/ban-chuyen-mon.jpg"
+                src="image/cac-ban/ban-chuyen-mon.webp"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Chuyên môn"
                 style="height: 350px; width: 100%; object-fit: contain"
@@ -216,7 +216,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
             </div>
             <div class="org-panel" id="ban-nhan-su">
               <img
-                src="image/cac-ban/ban-nhan-su.jpg"
+                src="image/cac-ban/ban-nhan-su.webp"
                 class="img-fluid rounded-3 mb-4"
                 alt="Ban Nhân sự"
                 style="height: 350px; width: 100%; object-fit: contain"
