--- a/su-kien.html
+++ b/su-kien.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sự kiện - HLS</title>
     <meta name="description" content="Sự kiện nổi bật của HLS: sự kiện sắp diễn ra và các sự kiện đã tổ chức." />
-    <link rel="icon" href="image/logo/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="image/logo/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="image/logo/logo.jpg" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
+          <img src="image/logo/logo.webp" alt="HLS Logo" style="height: 40px; border-radius: 8px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,15 +46,15 @@
                 <div class="col-lg-5">
                   <div class="row g-2 event-gallery">
                     <div class="col-12 col-md-8 mb-2 mb-md-0">
-                      <img class="img-fluid rounded" src="image/su-kien/ws-erp-main.jpg" alt="Workshop ERP" />
+                      <img class="img-fluid rounded" src="image/su-kien/ws-erp-main.webp" alt="Workshop ERP" />
                     </div>
                     <div class="col-12 col-md-4">
                       <div class="row g-2">
                         <div class="col-12">
-                          <img class="img-fluid rounded" src="image/su-kien/ws-erp1.jpg" alt="Workshop ERP" />
+                          <img class="img-fluid rounded" src="image/su-kien/ws-erp1.webp" alt="Workshop ERP" />
                         </div>
                         <div class="col-12">
-                          <img class="img-fluid rounded" src="image/su-kien/ws-erp2.jpg" alt="Workshop ERP" />
+                          <img class="img-fluid rounded" src="image/su-kien/ws-erp2.webp" alt="Workshop ERP" />
                         </div>
                       </div>
                     </div>
@@ -73,15 +73,15 @@
                 <div class="col-lg-5">
                   <div class="row g-2 event-gallery">
                     <div class="col-12 col-md-8 mb-2 mb-md-0">
-                      <img class="img-fluid rounded" src="image/su-kien/ws-shopee-main.jpg" alt="Workshop Shopee" />
+                      <img class="img-fluid rounded" src="image/su-kien/ws-shopee-main.webp" alt="Workshop Shopee" />
                     </div>
                     <div class="col-12 col-md-4">
                       <div class="row g-2">
                         <div class="col-12">
-                          <img class="img-fluid rounded" src="image/su-kien/ws-shopee1.jpg" alt="Workshop Shopee" />
+                          <img class="img-fluid rounded" src="image/su-kien/ws-shopee1.webp" alt="Workshop Shopee" />
                         </div>
                         <div class="col-12">
-                          <img class="img-fluid rounded" src="image/su-kien/ws-shoppe2.jpg" alt="Workshop Shopee" />
+                          <img class="img-fluid rounded" src="image/su-kien/ws-shoppe2.webp" alt="Workshop Shopee" />
                         </div>
                       </div>
                     </div>
