fix content cctc

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             </svg>
           </span>
         </button>
-        <h1 class="tw-text-center tw-text-gray-900 tw-font-semibold tw-text-3xl sm:tw-text-4xl md:tw-text-5xl lg:tw-text-6xl tw-max-w-4xl tw-leading-tight">
-          HUST Logistics and
+        <h1 class="tw-text-center tw-text-red-900 tw-font-semibold tw-text-3xl sm:tw-text-4xl md:tw-text-5xl lg:tw-text-6xl tw-max-w-4xl tw-leading-tight">
+          HUST
           <span class="tw-text-blue-600">
-            Supply Chain Club
+            Logistics and Supply Chain Club
           </span>
         </h1>
         <p class="tw-mt-6 tw-text-center tw-text-gray-600 tw-max-w-2xl tw-text-base sm:tw-text-lg tw-leading-relaxed">
@@ -170,9 +170,20 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               />
               <h5 class="fw-bold mb-2">Ban Truyền thông</h5>
               <p class="mb-0 text-muted-2">
-                Chịu trách nhiệm xây dựng và phát triển hình ảnh của CLB trên các
-                kênh truyền thông, thiết kế ấn phẩm, quản lý fanpage và kết nối các
-                thành viên.
+                Cơ quan ngôn luận chính thức của HLS trên các nền tảng truyền thông đại chúng, nơi truyền đi những thông điệp tích cực của CLB đến cộng đồng và các đối tác. Với nhiệm vụ :
+                <ul>
+                - Viết các bài viết thông báo về những sự kiện quan trọng của CLB như các cuộc thi, workshop,... và những nội dung khác
+                </ul>
+                <ul>
+                - Chụp ảnh, chỉnh sửa ảnh để có thể đưa lên các nền tảng của CLB
+                </ul>
+                <ul>
+                - Thiết kế khung ảnh, bộ nhận diện phục vụ cho các sự kiện lớn
+                </ul>
+                <ul>
+                - Quay và edit video quảng bá cho các sự kiện lớn
+                </ul>
+                
               </p>
             </div>
             <div class="org-panel" id="ban-doi-ngoai">
@@ -184,8 +195,14 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               />
               <h5 class="fw-bold mb-2">Ban Đối ngoại</h5>
               <p class="mb-0 text-muted-2">
-                Kết nối doanh nghiệp, đối tác, cựu sinh viên; tổ chức hoạt động hợp
-                tác và hỗ trợ cơ hội nghề nghiệp cho thành viên.
+                Những "đại sứ thương hiệu" của HLS, là cầu nối hiệu quả giữa CLB với các doanh nghiệp, đối tác, các đơn vị bảo trợ; đóng vai trò quan trọng trong việc xây dựng thương hiệu, nâng tầm và quảng bá hình ảnh HLS đến cộng đồng ngành Logistics và Chuỗi cung ứng. Với nhiệm vụ :
+<ul>
+- Đại diện CLB kêu gọi HTTT, mời nhà tài trợ
+</ul>
+<ul>
+- Liên lạc với những người tham gia sự kiện của CLB thông qua những kênh như gmail, zalo
+</ul>
+
               </p>
             </div>
             <div class="org-panel" id="ban-su-kien">
@@ -197,8 +214,20 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               />
               <h5 class="fw-bold mb-2">Ban Sự kiện</h5>
               <p class="mb-0 text-muted-2">
-                Lên ý tưởng, lập kế hoạch và triển khai các chương trình, sự kiện học
-                thuật và phong trào của CLB.
+                </ul>
+                Là “xương sống” của mọi hoạt động, Ban Sự kiện chịu trách nhiệm tổ chức, điều phối và đảm bảo chương trình được triển khai suôn sẻ, chuyên nghiệp, mang lại trải nghiệm tốt nhất cho người tham gia. Với nhiệm vụ :
+                <ul>
+                Chủ trì công tác chuẩn bị và hậu cần trước – trong – sau sự kiện, đảm bảo mọi chi tiết đều được triển khai đúng kế hoạch.
+                </ul>
+                <ul>
+                Quản lý và kiểm soát các vấn đề tài chính của sự kiện: lập dự trù, theo dõi chi tiêu, đảm bảo tính minh bạch và hiệu quả.
+                </ul>
+                <ul>
+                Phụ trách kỹ thuật, phân công và điều phối nhân sự theo từng khu vực, tối ưu hóa nguồn lực để sự kiện vận hành trơn tru.
+                </ul>
+                <ul>
+                Phối hợp chặt chẽ với Ban Truyền thông để xây dựng hình ảnh sự kiện chuyên nghiệp, thu hút và lan tỏa giá trị của CLB đến cộng đồng.
+                </ul>
               </p>
             </div>
             <div class="org-panel" id="ban-chuyen-mon">
@@ -210,8 +239,18 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               />
               <h5 class="fw-bold mb-2">Ban Chuyên môn</h5>
               <p class="mb-0 text-muted-2">
-                Tổ chức workshop, seminar, training nội bộ; xây dựng tài liệu học tập
-                và phát triển chuyên môn cho thành viên.
+                Được coi là cốt lõi của CLB HLS, BCM có trách nhiệm trong những công việc có tính chất học thuật cao của CLB với nhiệm vụ:
+<ul>  
+- Phụ trách nội dung câu hỏi trong những cuộc thi chính của CLB như “Nhìn lại Kinh tế”, “The Supply Chain Race”. Đây là cơ hội để các bạn được tiếp cận với những tài liệu cao cấp, từ đó có thể nâng cao năng lực chuyên môn.
+</ul>
+<ul>
+-Viết các bài viết với nội dung thời sự/học thuật để đăng tải trên các nền tảng số của CLB.
+</ul>
+
+<ul>
+-Được tham gia vào hoạt động hỗ trợ giải đáp thắc mắc trong học tập cùng các anh chị khóa trên
+</ul>
+
               </p>
             </div>
             <div class="org-panel" id="ban-nhan-su">
@@ -223,8 +262,23 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               />
               <h5 class="fw-bold mb-2">Ban Nhân sự</h5>
               <p class="mb-0 text-muted-2">
-                Quản lý và phát triển nguồn nhân lực, tổ chức các hoạt động nội bộ,
-                gắn kết thành viên và xây dựng văn hóa CLB.
+                Ban Nhân sự chịu trách nhiệm toàn bộ các khâu liên quan đến con người trong tổ chức, từ việc thu hút đến phát triển và giữ chân nhân tài, đảm bảo môi trường làm việc hiệu quả và gắn kết. Với nhiệm vụ :
+                <ul>
+                Tuyển dụng: Tìm kiếm, phỏng vấn, và chọn lọc ứng viên phù hợp.
+                </ul>
+                <ul>
+                Phát triển: Xây dựng đào tạo, lộ trình phát triển và giữ chân nhân sự.
+                </ul>
+                <ul>
+                Đánh giá & Quyền lợi: Triển khai đánh giá hiệu suất, đảm bảo quyền lợi và khen thưởng.
+                </ul>
+                <ul>
+                Gắn kết: Tổ chức sự kiện team-building, nắm bắt tâm tư để xây dựng môi trường làm việc tích cực.
+                </ul>
+                <ul>
+                Hợp tác: Phối hợp với các ban khác để đáp ứng nhu cầu nhân sự chung.
+                </ul>
+                
               </p>
             </div>
           </div>
