--- a/cuoc-thi.html
+++ b/cuoc-thi.html
@@ -46,15 +46,15 @@
         <!-- SRACE -->
         <div class="row g-5 align-items-center mt-4">
           <div class="col-lg-6">
-            <img src="image/cuoc-thi/Srace2025.webp" alt="Cuộc thi SRACE" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
+            <img src="image/cuoc-thi/srace2025/Srace2025.webp" alt="Cuộc thi SRACE" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
           </div>
           <div class="col-lg-6">
-            <h2 class="fw-bold mb-3">Cuộc thi SRACE</h2>
+            <h2 class="fw-bold mb-3">Cuộc thi SCRACE</h2>
             <p class="text-muted">
               SRACE là cuộc thi thường niên lớn nhất của CLB, tạo ra một sân chơi học thuật chuyên nghiệp về Logistics và Quản lý chuỗi cung ứng cho sinh viên. Thí sinh sẽ trải qua các vòng thi đầy thử thách, từ giải case study, thuyết trình đến phản biện, để tìm ra nhà vô địch xứng đáng.
             </p>
             <div class="d-flex align-items-center gap-3 my-4">
-              <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">Mùa giải 2024</span>
+              <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">Mùa giải 2025</span>
               <span class="badge bg-success-subtle text-success-emphasis rounded-pill px-3 py-2">Đã kết thúc</span>
             </div>
             <a href="#" class="btn btn-primary px-4">Tìm hiểu thêm <i class="bi bi-arrow-right ms-1"></i></a>
@@ -64,7 +64,7 @@
         <!-- VNY -->
         <div class="row g-5 align-items-center mt-5 pt-4">
           <div class="col-lg-6 order-lg-2">
-            <img src="image/cuoc-thi/vny2024.webp" alt="Cuộc thi VNY" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
+            <img src="image/cuoc-thi/vnylt2024/vny2024.webp" alt="Cuộc thi VNY" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
           </div>
           <div class="col-lg-6 order-lg-1">
             <h2 class="fw-bold mb-3">Cuộc thi VNYLT</h2>
@@ -78,6 +78,26 @@
             <a href="#" class="btn btn-outline-primary px-4">Xem lại các bài thi <i class="bi bi-play-circle ms-1"></i></a>
           </div>
         </div>
+
+        <!-- NLKT -->
+        <div class="row g-5 align-items-center mt-5 pt-4">
+          <div class="col-lg-6">
+            <img src="image/cuoc-thi/nlkt2024/nlkt.webp" alt="Cuộc thi NLKT" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
+          </div>
+          <div class="col-lg-6">
+            <h2 class="fw-bold mb-3">Cuộc thi Nhà Logistics trẻ</h2>
+            <p class="text-muted">
+              "Nhà Logistics trẻ" là một cuộc thi học thuật đầy kịch tính, nơi các tài năng trẻ đam mê lĩnh vực Logistics có cơ hội thể hiện kiến thức chuyên môn, kỹ năng giải quyết vấn đề và tư duy chiến lược.
+            </p>
+            <div class="d-flex align-items-center gap-3 my-4">
+              <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">Mùa giải 2024</span>
+              <span class="badge bg-success-subtle text-success-emphasis rounded-pill px-3 py-2">Đã kết thúc</span>
+            </div>
+            <a href="#" class="btn btn-primary px-4">Tìm hiểu thêm <i class="bi bi-arrow-right ms-1"></i></a>
+          </div>
+        </div>
+
+        
       </div>
     </main>
 
