--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -45,13 +45,22 @@
           <p class="text-muted">Mỗi mùa Giáng sinh, HLS lại cùng nhau tạo nên những kỷ niệm ấm áp qua các hoạt động trang trí, trao quà và những buổi tiệc thân mật.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh.webp" alt="Giáng sinh 1" />
+              <img src="image/hoat-dong/christmas2024/giangsinh.webp" alt="Giáng sinh 1" />
             </div>
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh2.webp" alt="Giáng sinh 2" />
+              <img src="image/hoat-dong/christmas2024/giangsinh2.webp" alt="Giáng sinh 2" />
             </div>
             <div class="col-md-4">
-              <img src="image/hoat-dong/giangsinh3.webp" alt="Giáng sinh 3" />
+              <img src="image/hoat-dong/christmas2024/giangsinh3.webp" alt="Giáng sinh 3" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/christmas2024/giangsinh4.webp" alt="Giáng sinh 4" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/christmas2024/giangsinh5.webp" alt="Giáng sinh 5" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/christmas2024/giangsinh6.webp" alt="Giáng sinh 6" />
             </div>
           </div>
         </div>
@@ -62,7 +71,10 @@
           <p class="text-muted">HLS luôn dành sự trân trọng đặc biệt đến các thành viên nữ. Ngày 8/3 là dịp để chúng tôi gửi lời cảm ơn và những món quà ý nghĩa.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/tangqua.webp" alt="Hoạt động 8/3" />
+              <img src="image/hoat-dong/8-3-2025/tangqua.webp" alt="Hoạt động 8/3" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/8-3-2025/tangqua2.webp" alt="Hoạt động 8/3" />
             </div>
           </div>
         </div>
@@ -73,7 +85,7 @@
           <p class="text-muted">Tôn vinh vẻ đẹp và vai trò của người phụ nữ Việt Nam, HLS tổ chức các hoạt động ý nghĩa để chúc mừng các thành viên nữ.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/tangqua2010.webp" alt="Hoạt động 20/10" />
+              <img src="image/hoat-dong/20-10-2025/tangqua2010.webp" alt="Hoạt động 20/10" />
             </div>
           </div>
         </div>
@@ -84,7 +96,7 @@
           <p class="text-muted">Dấu mốc quan trọng hàng năm, là dịp để tất cả các thế hệ thành viên cùng nhìn lại chặng đường đã qua và hướng tới tương lai.</p>
           <div class="row g-4 mt-2 activity-gallery">
             <div class="col-md-4">
-              <img src="image/hoat-dong/sinhnhat.webp" alt="Sinh nhật CLB" />
+              <img src="image/hoat-dong/birthday2025/sinhnhat.webp" alt="Sinh nhật CLB" />
             </div>
           </div>
         </div>
