--- a/lien-he.html
+++ b/lien-he.html
@@ -36,7 +36,7 @@
 
     <main class="section">
       <div class="container">
-        <h1 class="section-title">Liên hệ với hls</h1>
+        <h1 class="section-title">LIÊN HỆ VỚI HLS</h1>
         <div class="row g-4 mt-1">
           <div class="col-lg-6">
             <div class="card border-0 shadow-sm p-4 h-100">
@@ -66,10 +66,10 @@
               <div class="card-body">
                 <h5 class="fw-bold">Thông tin liên hệ</h5>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li class="mb-2">Email: <a href="mailto:contact.hls@hust.edu.vn">contact.hls@hust.edu.vn</a></li>
-                  <li class="mb-2">Fanpage: <a href="#">Facebook - HLS</a></li>
-                  <li class="mb-2">LinkedIn: <a href="#">HLS</a></li>
-                  <li class="mb-2">Địa chỉ: Phòng A1-101, Tòa nhà A1, Đại học Bách Khoa Hà Nội</li>
+                  <li class="mb-2">Email: <a href="mailto:ketnoi@hustlogistics.com">ketnoi@hustlogistics.com</a></li>
+                  <li class="mb-2">Fanpage: <a href="https://www.facebook.com/hlshust">Facebook - HLS</a></li>
+                  <li class="mb-2">LinkedIn: <a href="#">HLS</a></li> 
+                  <li class="mb-2">Địa chỉ:  Đại học Bách Khoa Hà Nội</li>
                 </ul>
                 <div class="ratio ratio-16x9 rounded overflow-hidden">
                   <iframe
