--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         }
       }
     </script>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="HLS - CLB Hỗ Trợ Học Thuật" />
+    <meta property="og:description" content="Website chính thức của CLB Hỗ Trợ Học Thuật - HLS" />
+    <meta property="og:image" content="image/logo/thumbnailog.webp" />
+    <meta property="og:url" content="https://hls-website.vercel.app/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <!-- Header / Navbar -->
