--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="HLS - CLB Hỗ Trợ Học Thuật" />
+    <meta property="og:description" content="Website chính thức của CLB Hỗ Trợ Học Thuật - HLS" />
+    <meta property="og:image" content="image/logo/thumbnailog.webp" />
+    <meta property="og:url" content="https://hls-website.vercel.app/hoat-dong.html" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
